RESOLVED FIXED162128
Web Inspector: ⇧⌘C should highlight node under cursor without re-moving mouse
https://bugs.webkit.org/show_bug.cgi?id=162128
Summary Web Inspector: ⇧⌘C should highlight node under cursor without re-moving mouse
Joseph Pecoraro
Reported 2016-09-17 19:13:07 PDT
Summary: ⇧⌘C should highlight node under cursor without re-moving mouse Steps to reproduce: 1. Hover this text 2. Trigger ⇧⌘C => Expected highlight to appear. It never appears until the mouse moves
Attachments
[PATCH] Proposed Fix (3.98 KB, patch)
2016-09-17 19:23 PDT, Joseph Pecoraro
no flags
Radar WebKit Bug Importer
Comment 1 2016-09-17 19:13:30 PDT
Joseph Pecoraro
Comment 2 2016-09-17 19:23:06 PDT
Created attachment 289189 [details] [PATCH] Proposed Fix
Blaze Burg
Comment 3 2016-09-19 04:11:40 PDT
Comment on attachment 289189 [details] [PATCH] Proposed Fix r=me
WebKit Commit Bot
Comment 4 2016-09-19 04:32:41 PDT
Comment on attachment 289189 [details] [PATCH] Proposed Fix Clearing flags on attachment: 289189 Committed r206093: <http://trac.webkit.org/changeset/206093>
WebKit Commit Bot
Comment 5 2016-09-19 04:32:44 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.