Web Inspector: ⇧⌘C should highlight node under cursor without re-moving mouse https://bugs.webkit.org/show_bug.cgi?id=162128

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2016-09-19
Reviewed by Brian Burg.

* inspector/InspectorDOMAgent.h:
* inspector/InspectorDOMAgent.cpp:
(WebCore::InspectorDOMAgent::willDestroyFrontendAndBackend):
(WebCore::InspectorDOMAgent::mouseDidMoveOverElement):
(WebCore::InspectorDOMAgent::highlightMousedOverNode):
(WebCore::InspectorDOMAgent::setSearchingForNode):
When the inspector is connected, remember the last moused over node.
This produces far more consistent results of highlighting under
the cursor when pressing and releasing the keyboard shortcut keys,
without having to move the mouse. Even when using the shortcut to
first connect the inspector this produces far more consistent
results because releasing the keys for the shortcut produce new
mouseDidMoveOverElement events.

Canonical link: https://commits.webkit.org/180252@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@206093 268f45cc-cd09-0410-ab3c-d52691b4dbfc